# netbox-celery

./: .dockerignore  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tasks.py
.github/workflows/: ci_integration.yml
beat/: index.html
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
docker/celery/: celery_beat_entrypoint.sh  celery_worker_entrypoint.sh
docker/configuration/: configuration.example.py  docker-entrypoint.sh
docker/env/: netbox.env  postgres.env  redis.env
docs/: beat.md  index.md  install.md  models.md  tasks.md
docs/_theme/: main.html
docs/example-plugin/: pyproject.toml
docs/example-plugin/example_plugin/: forms.py  navigation.py  tasks.py  urls.py  views.py
example-plugin/: index.html
example-plugin/example_plugin/: __init__.py
install/: index.html
models/: index.html
netbox_celery/: __init__.py  celery.py  choices.py  filtersets.py  forms.py  models.py  navigation.py  schedule.py  settings_funcs.py  tables.py  tasks.py  urls.py  views.py
netbox_celery/api/: __init__.py  nested_serializers.py  serializers.py  urls.py  views.py
netbox_celery/migrations/: 0001_initial.py  0002_rename_data_celeryresult_kwargs_celeryresult_args.py  0003_celeryresult_result.py  0004_alter_celeryresult_custom_field_data.py  0005_alter_celerylogentry_log_level.py  0006_alter_celerylogentry_log_level.py  0007_alter_celerylogentry_log_level.py
netbox_celery/templates/netbox_celery/: celery_task_form.html  celeryresult.html
netbox_celery/tests/: __init__.py  test_api.py  test_views.py
search/: search_index.json
tasks/: index.html
