[tool.poetry]
name = "example-plugin"
version = "0.1.0"
description = ""
authors = ["OpticoreIT <opensource@opticoreit.com>"]
readme = "README.md"
packages = [{include = "example_plugin"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
